# BioHazard-BL1-SDK-Mods

Blitz/: Blitz.sdkmod  readme
Blitz/Source/sdk_mods/Blitz/: __init__.py  pyproject.toml
CharacterVault/: CharacterVault.sdkmod  readme
CharacterVault/Source/sdk_mods/CharacterVault/: __init__.py  hooks.py  pyproject.toml  vault_hunters.py
ComfyFFYL/: ComfyFFYL.sdkmod  readme
ComfyFFYL/Source/sdk_mods/ComfyFFYL/: __init__.py  pyproject.toml
CustomCharacters/: CustomCharacters.sdkmod  readme
CustomCharacters/Source/sdk_mods/CustomCharacters/: __init__.py  hooks.py  pyproject.toml  vault_hunters.py
experiments/BioHazardStuff/: todo.txt
experiments/BioHazardStuff/Source/sdk_mods/BioHazardStuff/: __init__.py  pyproject.toml
experiments/ItemLights_Yeti/: ItemLights.sdkmod  readme.txt
experiments/ItemLights_Yeti/Source/sdk_mods/ItemLights/: __init__.py  pyproject.toml
experiments/Playthrough3_MOW/: readme
experiments/Playthrough3_MOW/Character Vault support/: Playthrough 3.sdkmod
experiments/Playthrough3_MOW/Character Vault support/Source/sdk_mods/Playthrough 3/: __init__.py  pyproject.toml
experiments/Playthrough3_MOW/CustomCharacters support/Source/sdk_mods/Playthrough 3/: DLCEnemyGroups.py  __init__.py
experiments/Playthrough3_MOW/Standalone/Source/sdk_mods/Playthrough 3/: __init__.py  pyproject.toml
