[project]
name = "BioHazard Stuff"
version = "0.0.0"
authors = [{ name = "BioHazard" }]
description = "Not a proper mod."

[tool.sdkmod]
name = "BioHazard Stuff"
mod_type = "Standard" # or "Library"
supported_games = ["BL1"]
coop_support = "Unknown"
auto_enable = "False"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }